# aio-telegram-client

./: README.md  pyproject.toml
aio_telegram_client/: client.py
